-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.1
-
-
1ee3a44db (dev), 70c214172 (6.8), 2a4830442 (6.7)
-
Multimedia wk 27-28, Multimedia wk 29-30, Multimedia wk 31-32
In QCamera/Camera zoomFactor/zoomTo does not cause m_zoomFactor to change when zooming, so it always thinks it is at 1.0 and any attempt to zoom back to 1.0 does nothing.
In qavcamerabase.mm, zoomTo() should probably call zoomFactorChanged to update it with the new value.
For Gerrit Dashboard: QTBUG-126192 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
578300,4 | qavfcamerabase: emit 'zoomFactorChanged' signal | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
579190,2 | qavfcamerabase: emit 'zoomFactorChanged' signal | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
579221,2 | qavfcamerabase: emit 'zoomFactorChanged' signal | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |