qavfcamerabase: emit 'zoomFactorChanged' signal

Otherwise, even if we do some zooming actually, QCamera still thinks
zoom factor is always 1. And, e.g., on Android or some other platforms
this is what we already do (emitting).

Fixes: QTBUG-126192
Change-Id: I9446c0a113d57a70534c254ad098e2be5819ad66
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
(cherry picked from commit 1ee3a44db6f33c21f91d6c65f7ef516bc75b863e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 70c2141729f88964516a8a439debfdeb606f28bd)